Fixed cramped nav bar and hid the notification sample

--- a/tests/SCSS Port/styles.scss
+++ b/tests/SCSS Port/styles.scss
@@ -140,7 +140,7 @@ header {
                 display: inline;
                 height: 100%;
                 margin: 0 auto;
-                min-width: 6%;
+                min-width: 9%;
                 text-align: left;
 
                 // This will be the actual hyper link so we need to format it to be large with padding and a width
